Fix ad overflow on the homepage

--- a/app/styles/nypr-ui/_bricks.scss
+++ b/app/styles/nypr-ui/_bricks.scss
@@ -274,6 +274,7 @@
   ));
 
   &--sponsored {
+    overflow: hidden;
     box-shadow: none;
     background: $nearwhite;
     @include flexbox((
